==

* Allow math to be rendered with MathJax! Enclose math with $ or $$,
  by default we are using MathJax online, but you can set this to
  your local installation as well. MathJax is enabled by default,
  and can also be enabled only for certain tags.

* Switch tabs/pages using mouse.

* Double-click in thread index to open thread.

* Paging in thread index moves cursor.

* Do not load remote images or resources from html files.

* C-m: adds 'muted' tag, 'muted' messages are excluded from non-explicit
       searches.
*   v: refine query.

== v0.1 / 2014-11-30

First release of Astroid!
