@@ -153,6 +153,19 @@ namespace Astroid {
     // allow for all messages.
     default_config.put ("thread_view.mathjax.for_tags", "");
 
+    /* code prettify */
+    default_config.put ("thread_view.code_prettify.enable", true);
+
+    // run_prettify.js will be added to this uri when the script is loaded
+    default_config.put ("thread_view.code_prettify.uri_prefix", "https://google-code-prettify.googlecode.com/svn/loader/");
+
+    // a ; delimited list of tags which code_prettify is enabled for, if empty,
+    // allow for all messages.
+    default_config.put ("thread_view.code_prettify.for_tags", "");
+
+    // the tag enclosing code
+    default_config.put ("thread_view.code_prettify.code_tag", "```");
+    //default_config.put ("thread_view.code_prettify.enable_for_patches", true);
   }
 
   void Config::write_back_config () {
