@@ -5,6 +5,8 @@
   your local installation as well. MathJax is enabled by default,
   and can also be enabled only for certain tags.
 
+* Highlight code syntax between ``` markdown-style tags.
+
 * Switch tabs/pages using mouse.
 
 * Double-click in thread index to open thread.
